--- a/css/style.css
+++ b/css/style.css
@@ -827,19 +827,23 @@ a:active {
     position: absolute;
     background: white;
     width: 100%;
-    z-index: 999;
+    z-index: 50;
     left: 0;
-    top: 10px;
+    top: 15px;
     padding-top: 10px;
     display: none;
   }
   .main-menu ul li a {
-    padding: 10px 15px;
-    width: 15%;
+    position: static;
+    z-index: 100;
+    padding: 10px;
+    width: 100%;
     border-bottom: 1px solid #ddd;
     display: block;
   }
   .main-menu ul li {
+    position: static;
+    width: 18%;
     display: block;
   }
   .main-menu ul li:last-child a {
